@@ -40,7 +40,7 @@ ZHS16GBK:          GBK
 # MS Windows Code Page 950 with Hong Kong Supplementary Character
 # Set HKSCS-2001 (character set conversion to and from Unicode is
 # based on Unicode 3.0)
-ZHT16HKSCS:        Big5         # Does the Big5 include HKSCS?
+ZHT16HKSCS:        [Big5-HKSCS, Big5]
 
 # MS Windows Code Page 950 Traditional Chinese
 ZHT16MSWIN950:     Big5
@@ -166,7 +166,7 @@ ZHT16DBT:          nil          # FIXME
 # MS Windows Code Page 950 with Hong Kong Supplementary Character
 # Set HKSCS-2001 (character set conversion to and from Unicode is
 # based on Unicode 3.1)
-ZHT16HKSCS31:      Big5         # Does the Big5 include HKSCS?
+ZHT16HKSCS31:      [Big5-HKSCS, Big5]
 
 # SOPS 32-bit Traditional Chinese
 ZHT32SOPS:         nil          # FIXME
